--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Starter Snowpack App" />
     <title>Starter Snowpack App</title>
+    <script type="module" src="js/index.js"></script>
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <h1>Welcome to Snowpack!</h1>
+    <div id="divMessages" class="messages">
+    </div>
+    <div class="input-zone">
+        <label id="lblMessage" for="tbMessage">Message:</label>
+        <input id="tbMessage" class="input-zone-input" type="text" />
+        <button id="btnSend">Send</button>
+    </div>
   </body>
 </html>
